--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crud_app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/LuisAcev/CRUD-Users-Management-App-Redux-ToolKit",
+  "homepage": "https://luisacev.github.io/CRUD-Users-Management-App-Redux-ToolKit",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
